[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["tokio-macros", "rt-multi-thread", "macros"] }
warp = { version = "0.4.2", features = ["server"] }
